Fixed image alignment issue, got rid of list and created content and box divs to help allign all images in the center. Then created paragraph below to add description for the image.

--- a/style.css
+++ b/style.css
@@ -17,19 +17,24 @@ h1 {
 }
 
 .content { 
-    justify-content: space-around; 
-    align-items: center; 
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    justify-content: center;
 } 
 
 .box { 
-    width: 73%; 
-    height: 25%; 
-    padding: 5px; 
+    padding: 50px; 
+    margin: auto;
 }
 
 .box img {
-    width: 550px;
-    height: 350px;
+    width: 500px;
+    height: 300px;
+}
+
+.box p {
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
